--- a/sites/projects.kwon.nyc/config.toml
+++ b/sites/projects.kwon.nyc/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://projects.kwon.nyc/"
+baseURL = "https://projects.kwon.nyc/"
 languageCode = "en-us"
 title = "projects.kwon.nyc"
 publishDir = "public"
